--- a/BaiThucHanh1/Views/Student/Index.cshtml
+++ b/BaiThucHanh1/Views/Student/Index.cshtml
@@ -1,4 +1,17 @@
-﻿@model IEnumerable<BaiThucHanh1.Models.Student>
+﻿@section Scripts {
+	<script>
+		var table = document.querySelector("table");
+		table.onclick = function onTableClick() {
+			table.style = "background-color: yellow";
+		}
+	</script>
+}
+@{
+	ViewData["Title"] = "Student List";
+	Layout = "~/Views/Shared/MyLayoutHelper.cshtml";
+}
+
+@model IEnumerable<BaiThucHanh1.Models.Student>
 <a asp-controller="Student" asp-action="Create" asp-route-Student="Admin/Student/Add" class="btn btn-primary">Create Student</a>
 <table class="table table-striped">
 	<thead>
